--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: zard
 description: Zard is a schema validation and transformation library for Dart, inspired by the popular Zod library for JavaScript.
 version: 0.0.12
 homepage: https://github.com/evandersondev/zard
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/evandersondev/zard
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
